[package]
authors    =["Thor Kamphefner <thorck@pm.me>"]
description="""experiments with CSPRNGs"""
edition    ="2021"
license    ="Apache2.0 OR MIT"
name       ="csprng"
repository ="https://github.com/thor314/csprng"
version    ="0.1.0"

[dependencies]
# Error Handling
anyhow   ="1.0"
thiserror="1.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] } # Your dependencies start here

rand = { version = "0.8" }
ppv-lite86 = "0.2.17"
rand_core = "0.6.4"

[dev-dependencies]
## Bench ##
#criterion = "0.3"
# iai = "0.1" # criterion alternative

## Testing utils
arbitrary = { version = "1.1", features = ["derive"] } # see quickcheck
test-log =  { version = "0.2", default-features = false, features = ["trace"] } 
# test-log = "0.2"        # log/tracing independent test-log consumer

quickcheck = "1.0"      # lowkey proptest suite
quickcheck_macros = "1" # derive 
rstest = "0.15"         # testing convenience proc-macros

[[test]]
name = "integration"
path = "tests/tests.rs"

